c2rust-refactor/tests/snapshots/snapshots__refactor-reconstruct_for_range.rs.snap
---
source: c2rust-refactor/tests/snapshots.rs
expression: c2rust-refactor reconstruct_for_range --rewrite-mode alongside -- tests/snapshots/reconstruct_for_range.rs --edition 2021
---
fn main() {
    let (mut i, mut j, mut k);

    'a: for i in 0..10 {
        println!("{}", i);
    }
    'b: for j in (0..10).step_by(2 as usize) {
        println!("{}", j);
    }

    k = 0;
    'c: while (k < 10) {
        k += 2;
        println!("{}", k);
        k = k + 1;
    }
}
