c2rust-refactor/tests/snapshots/snapshots__refactor-reconstruct_while.rs.snap
---
source: c2rust-refactor/tests/snapshots.rs
expression: c2rust-refactor reconstruct_while --rewrite-mode alongside -- tests/snapshots/reconstruct_while.rs --edition 2021 -Awarnings
---
fn main() {
    let mut i = 0;
    'a: while i < 10 {
        println!("{}", i);
        i = i + 1;
    }
}
