c2rust-refactor/tests/snapshots/snapshots__refactor-rename_unnamed.rs.snap
---
source: c2rust-refactor/tests/snapshots.rs
expression: c2rust-refactor rename_unnamed --rewrite-mode alongside -- tests/snapshots/rename_unnamed.rs --edition 2021
---
pub mod bar {
    pub mod bar_h {
        #[derive(Copy, Clone)]
        #[repr(C)]
        pub struct C2RustUnnamed_0 {
            a: usize,
        }

        #[derive(Copy, Clone)]
        #[repr(C)]
        pub struct C2RustUnnamed_1 {
            x: i32,
            y: i32,
        }

        #[derive(Copy, Clone)]
        #[repr(C)]
        pub struct bar_t {
            u: C2RustUnnamed_0,
        }
    }
    use self::bar_h::*;
}

pub mod foo {
    pub mod foo_h {
        #[derive(Copy, Clone)]
        #[repr(C)]
        pub struct C2RustUnnamed_2 {
            b: usize,
        }

        #[derive(Copy, Clone)]
        #[repr(C)]
        pub struct C2RustUnnamed_3 {
            c: usize,
        }

        #[derive(Copy, Clone)]
        #[repr(C)]
        pub struct foo_t {
            u: C2RustUnnamed_2,
        }
    }

    use self::foo_h::foo_t;
    use self::foo_h::C2RustUnnamed_2;
    use self::foo_h::C2RustUnnamed_3;
    #[derive(Copy, Clone)]
    #[repr(C)]
    pub struct foo_bar {
        u: C2RustUnnamed_2,
        u2: C2RustUnnamed_3,
    }
}

pub mod test {
    pub mod C2RustUnnamed {}
}

struct C2RustUnnamed_4 {
    d: u32,
}

fn main() {
    let u = C2RustUnnamed_4 { d: 0 };

    println!("{}", u.d);
}
