c2rust-refactor/tests/snapshots/snapshots__refactor-reorganize_definitions-reorganize_assoc_items.rs.snap
---
source: c2rust-refactor/tests/snapshots.rs
expression: c2rust-refactor reorganize_definitions --rewrite-mode alongside -- tests/snapshots/reorganize_assoc_items.rs --edition 2021
---
#![feature(extern_types)]
#![feature(rustc_private)]
#![feature(register_tool)]
#![register_tool(c2rust)]
#![allow(non_upper_case_globals)]
#![allow(non_camel_case_types)]
#![allow(non_snake_case)]
#![allow(dead_code)]
#![allow(mutable_transmutes)]
#![allow(unused_mut)]

pub mod bar_h {
    #[derive(Clone, Copy)]
    #[repr(transparent)]
    pub struct C2Rust_Unnamed_3(pub ::core::ffi::c_uint);

    impl crate::bar_h::C2Rust_Unnamed_3 {
        pub const V: Self = Self(42);
    }

    #[derive(Clone, Copy)]
    #[repr(transparent)]

    pub struct SomeEnum(pub ::core::ffi::c_uint);

    impl crate::bar_h::SomeEnum {
        pub const A: Self = Self(0);

        pub const B: Self = Self(1);
    }

    #[derive(Clone, Copy)]
    #[repr(transparent)]

    pub struct C2Rust_Unnamed_2(pub ::core::ffi::c_uint);

    impl crate::bar_h::C2Rust_Unnamed_2 {
        pub const U: Self = Self(42);
    }
}
pub mod bar {}

pub mod foo {

    unsafe fn foo() {
        let e1 = crate::bar_h::SomeEnum::A;
        let e2 = crate::bar_h::SomeEnum::B;
        let e3 = crate::bar_h::C2Rust_Unnamed_2::U;
        let e4 = crate::bar_h::C2Rust_Unnamed_3::V;
    }
}

fn main() {
    println!("hello!");
}
