c2rust-refactor/tests/snapshots/snapshots__refactor-reorganize_definitions-reorganize_bitfield_ty.rs.snap
---
source: c2rust-refactor/tests/snapshots.rs
expression: c2rust-refactor reorganize_definitions --rewrite-mode alongside -- tests/snapshots/reorganize_bitfield_ty.rs --edition 2021
---
#![feature(register_tool)]
#![register_tool(c2rust)]
#![allow(non_camel_case_types)]
#![allow(dead_code)]
#![allow(unused_imports)]

pub mod data_h {
    #[repr(C)]
    pub struct data_t {
        #[bitfield(name = "flag", ty = "bit", bits = "0..=0")]
        #[bitfield(name = "wide", ty = "::core::ffi::c_uint", bits = "1..=3")]
        pub flag_wide: [u8; 1],
        #[bitfield(padding)]
        pub c2rust_padding: [u8; 3],
    }
}
pub mod setup_h {
    pub type bit = u32;
}
pub mod foo {

    pub fn use_data(d: *const crate::data_h::data_t) -> crate::setup_h::bit {
        unsafe { (*d).flag_wide[0] as crate::setup_h::bit }
    }
}

pub mod bar {

    pub fn use_data(d: *const crate::data_h::data_t) -> crate::setup_h::bit {
        unsafe { (*d).flag_wide[0] as crate::setup_h::bit }
    }
}
